--- a/app/globals.css
+++ b/app/globals.css
@@ -3,6 +3,12 @@
 @tailwind utilities;
 
 @layer base {
+    html {
+      color-scheme: light !important;
+    }
+  }
+
+@layer base {
     :root {
         --background: 0 0% 100%;
         --foreground: 222.2 84% 4.9%;
@@ -26,7 +32,7 @@
         --radius: 1rem;
     }
 
-    .dark {
+    /* .dark {
         --background: 222.2 84% 4.9%;
         --foreground: 210 40% 98%;
         --card: 222.2 84% 4.9%;
@@ -46,14 +52,11 @@
         --border: 217.2 32.6% 17.5%;
         --input: 217.2 32.6% 17.5%;
         --ring: 224.3 76.3% 48%;
-    }
+    } */
 }
 
 
-.test .react-colorful__hue {
-    border-radius: 0;
+.rbgcp-input {
+    color: black !important;
 }
 
-.test .react-colorful__saturation {
-    border-radius: 0;
-}
