--- a/app/globals.css
+++ b/app/globals.css
@@ -4,9 +4,9 @@
 
 @layer base {
     html {
-      color-scheme: light !important;
+        color-scheme: light !important;
     }
-  }
+}
 
 @layer base {
     :root {
@@ -60,3 +60,46 @@
     color: black !important;
 }
 
+
+
+.AccordionTrigger[data-state='open']>.AccordionChevron {
+    transform: rotate(180deg);
+}
+
+
+.AccordionContent {
+    overflow: hidden;
+    font-size: 15px;
+    color: var(--mauve-11);
+    background-color: var(--mauve-2);
+  }
+
+
+.AccordionContent[data-state='open'] {
+    animation: slideDown 300ms cubic-bezier(0.87, 0, 0.13, 1);
+}
+
+.AccordionContent[data-state='closed'] {
+    animation: slideUp 300ms cubic-bezier(0.87, 0, 0.13, 1);
+}
+
+
+@keyframes slideDown {
+    from {
+        height: 0;
+    }
+
+    to {
+        height: var(--radix-accordion-content-height);
+    }
+}
+
+@keyframes slideUp {
+    from {
+        height: var(--radix-accordion-content-height);
+    }
+
+    to {
+        height: 0;
+    }
+}
